gccida/g0/recog_27
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37615:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2d = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37621:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3a = ( rtx)x2d[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37630:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2f = ( rtx)x1a[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37709:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37710:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2m = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37713:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2m; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37720:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2n; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37721:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2o = ( rtx)x1f[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37724:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x2o->fld[0].rtx, recog_data_0.operand[1]) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37726:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3e = ( rtx)x2o[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37788:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37789:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2h = (  struct rtx_def *)x1[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37795:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2h; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37810:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2i; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37811:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2j = ( rtx)x1c[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37818:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( x2j->fld[0].rtx, recog_data_0.operand[1]) ) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37824:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3d = ( rtx)x2j[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37833:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)x3d->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/insn-recog.c:37892:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_27/src/obj/insn-recog.o] Error 1
